1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/Goodies.c:
	(CreateTipWindow):
	added #ifdef SHAPE

1999-11-30  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/Goodies.c (ShowTipWindow):
	Fixed core dump if FvwmTaskBarShowTips is not enabled

1999-11-28  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.1: Fixed description of how FvwmForm automatically
	reads config files.

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.1:
	fixed typo

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/findcmd.pl (getcmd):
	use new name of 'functions' array

1999-11-27  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProssesMessage):
	(LoopOnEvent):
	(HideTaskBar):
	(RevealTaskBar):
	* FvwmTaskBar/FvwmTaskBar.1
	FvwmTaskBarAutoHide ameliorations and bug fix: now the TaskBar does't
	hide if the pointer is on the border; fix a problem with the first
	tip.
	Fixed the StartMenu tip

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmBacker/FvwmBacker.c (ExecuteMatchingCommands):
	(ProcessMessage):
	-Wall fixes

1999-11-27  Mikhael Goikhman  <migo@homemail.com>

	* FvwmBacker/FvwmBacker.[ch]:
	Don't listen to M_NEW_DESK anymore; fixed colorset update condition;
	removed all kinds of debug logs, some clean up.

1999-11-26  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/ReadXServer.c (ReadXServer): Fix problem with button clicks
	being ignored.

1999-11-26  Hippo

	* FvwmGtk/FvwmGtk.c: Fixed "KillModule FvwmGtk" causing endless loop

1999-11-25  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c: Allow for command line variables for forms.
	* FvwmForm/FvwmForm.1: Document variable substitution in forms.

1999-11-25  olicha  <olivier.chapuis@free.fr>

	* FvwmIconBox/FvwmIconBox.c (ParseOptions):
	(process_message):
	(AddItem):
	* FvwmIconBox/FvwmIconBox.1
	Added FvwmIconBoxUseSkipList configuration option

	* FvwmWinList/FvwmWinList.1
	Fix an obvious typo
