@@ -148,7 +148,7 @@ separated lists of commands is strongly discouraged due to synchronization
 problems with fvwm.  Please use complex fvwm functions instead (defined with
 the 'AddToFunc' command of fvwm).
 
-.IP "*FvwmWinNoIconAction \fIaction\fP"
+.IP "*FvwmWinListNoIconAction \fIaction\fP"
 Tells FvwmWinList to do \fIaction\fP is when a NoIcon style window is
 iconified or de-iconified. Relevant coordinates are appended to \fIaction\fP so
 that the icon can be traced to an FvwmWinList button. An example action
